--- a/styles/maingridversion.css
+++ b/styles/maingridversion.css
@@ -1403,18 +1403,18 @@
     margin-bottom: 50px;
     grid-column: 1/span 4;
     grid-row-start: 17;
-    justify-self:center;
     margin-left: 5%;
     margin-right: 5%;
+    text-align: center;
   }
 
 .wireframes img {
-  width: 80px;
+  width: 150px;
 }
 
   @media screen and (min-width: 991px){
   .wireframes img{
-    width:100px;
+    width:200px;
 
   }
 }
@@ -1661,12 +1661,29 @@ text-align: center;
 }
 
   .hifi-mockups img {
-    width: 80px;
+    width: 150px;
   }
 
     @media screen and (min-width: 991px){
     .hifi-mockups img{
-      width:100px;
+      width:200px;
+
+    }
+  }
+
+  .all-hifi{
+    display: block;
+    margin: 0 auto;
+    margin-top: 50px;
+}
+
+  }
+
+  @media screen and (min-width: 991px){
+      .all-hifi{
+        display: block;
+        margin: 0 auto;
+        margin-top: 50px;
 
     }
   }
@@ -1775,15 +1792,14 @@ text-align: center;
     }
   }
 
-  .final-revision-screens{
-    margin-top: 50px;
-    width: 325px;
+  .revision-screens img{
+    width:150px
 
    }
 
    @media screen and (min-width: 991px){
-     .final-revision-screens{
-       width:100%;
+     .revision-screens img{
+       width:200px
      }
    }
 
