--- a/styles/maingridversion.css
+++ b/styles/maingridversion.css
@@ -2090,47 +2090,110 @@ text-align: center;
           }
       }
 
-.intent-sketch-notes{
-  text-align: left;
-
-}
-
-.intent-wireframes{
-  margin-bottom: 50px;
-  grid-column: 1/span 4;
-  grid-row-start: 17;
-  margin-left: 5%;
-  margin-right: 5%;
-  text-align: center;
-}
-
-.intent-wireframes img {
-width: 150px;
-}
-
-@media screen and (min-width: 991px){
-.intent-wireframes img{
-  width:200px;
-
-}
-}
-
-
-@media screen and (min-width: 991px){
-  .intent-wireframes{
-  margin-left: 20%;
-  margin-right: 20%;
+  .intent-sketch-notes{
+    text-align: left;
 
   }
-}
 
-.intent-case-study{
-  display:grid;
-  grid-gap: 0px;
-  grid-template-columns: repeat(4,1fr);
-  grid-template-rows: auto;
-  max-width: 1959px;
-  margin:0 auto;
-  scroll-behavior: smooth;
-  /* margin:5%; */
-}
+  .intent-wireframes{
+    margin-bottom: 50px;
+    grid-column: 1/span 4;
+    grid-row-start: 17;
+    margin-left: 5%;
+    margin-right: 5%;
+    text-align: center;
+  }
+
+
+  .intent-paper-wireframes{
+      width: 100%;
+
+  }
+
+
+  @media screen and (min-width: 991px){
+  .intent-paper-wireframes{
+    width:100%;
+  }
+  }
+
+  .intent-digital-wireframes{
+  width: 150px;
+  }
+
+  @media screen and (min-width: 991px){
+  .intent-digital-wireframes{
+    width:200px;
+
+  }
+  }
+
+
+  @media screen and (min-width: 991px){
+    .intent-wireframes{
+    margin-left: 20%;
+    margin-right: 20%;
+
+    }
+  }
+
+  .intent-case-study{
+    display:grid;
+    grid-gap: 0px;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: auto;
+    max-width: 1959px;
+    margin:0 auto;
+    scroll-behavior: smooth;
+    /* margin:5%; */
+  }
+
+  .intent-sketch{
+    grid-column: 1/span 4;
+    grid-row-start: 16;
+    width:300px;
+    justify-self:center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  @media screen and (min-width: 991px){
+      .intent-sketch{
+        width:600px;
+        margin-left: 20%;
+        margin-right: 20%;
+    }
+  }
+
+  .intent-mindmap{
+    width: 100%;
+    /* height: 155.13px; */
+    display:inline-block;
+  }
+
+  .intent-logo-option-1{
+    width: 45%;
+    display: inline;
+  }
+
+  .intent-logo-option-2{
+    width: 45%;
+    display: inline;
+  }
+
+  @media screen and (min-width: 991px){
+
+    .intent-logo-option-1{
+      width: 25%;
+      display: inline;
+      justify-content: center;
+    }
+
+    .intent-logo-option-2{
+      width: 25%;
+      display: inline;
+      justify-content: center;
+    }
+  }
