--- a/styles/maingridversion.css
+++ b/styles/maingridversion.css
@@ -2118,14 +2118,19 @@ text-align: center;
   }
 
   .intent-digital-wireframes{
-  width: 150px;
+  width: 325px;
+  box-shadow: 0px 0px 10px grey ;
+  margin: 2%
+
+
   }
 
   @media screen and (min-width: 991px){
   .intent-digital-wireframes{
-    width:200px;
-
-  }
+    width:325px;
+    box-shadow: 0px 0px 15px grey;
+    margin: 5%
+    }
   }
 
 
@@ -2195,5 +2200,26 @@ text-align: center;
       width: 25%;
       display: inline;
       justify-content: center;
+    }
+  }
+
+  .intent-final-colors{
+    margin-top:50px;
+    margin-bottom: 50px;
+    /* width:100px; */
+    display:inline-block;
+    padding:2%;
+  }
+
+  .intent-hifi-mockups img {
+    box-shadow: 0px 0px 15px grey;
+    width: 325px;
+  }
+
+    @media screen and (min-width: 991px){
+    .intent-hifi-mockups img{
+      box-shadow: 0px 0px 15px grey;
+      width:325px;
+
     }
   }
