--- a/styles/maingridversion.css
+++ b/styles/maingridversion.css
@@ -1605,8 +1605,8 @@
   @media screen and (min-width: 991px){
     .type-chart{
       grid-template-columns: 1fr 1fr;
-      margin-left: 20%;
-      margin-right: 20%;
+      margin-left: 10%;
+      margin-right: 10%;
     }
   }
 
@@ -2251,3 +2251,40 @@ text-align: center;
     justify-self: center;
 
   }
+
+
+  .intent-discovery-section2{
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 1fr;
+    justify-items:center;
+
+  }
+
+
+  @media screen and (min-width: 991px){
+    .intent-discovery-section2{
+      display: grid;
+      grid-gap: 20px;
+      grid-template-columns: 1fr 1fr 1fr;
+      justify-items:center;
+      margin-left: 5%;
+      margin-right: 5%;
+    }
+
+
+
+
+  }
+
+  .intent-discovery-section2{
+    grid-column: 1/span 4;
+    grid-row-start: 6;
+  }
+
+  /* @media screen and (min-width: 991px){
+    .intent-discovery-section2{
+      margin-left: 20%;
+      margin-right: 20%;
+    }
+  } */
