--- a/styles/maingridversion.css
+++ b/styles/maingridversion.css
@@ -2380,3 +2380,27 @@ text-align: center;
   padding-bottom: 20px;
 }
 }
+
+.intent-all-hifi{
+  display: block;
+  margin: 0 auto;
+  margin-top: 50px;
+  margin-bottom:50px;
+}
+
+}
+
+@media screen and (min-width: 991px){
+    .intent-all-hifi{
+      display: block;
+      margin: 0 auto;
+      margin-top: 50px;
+      margin-bottom:50px;
+  }
+}
+
+
+.intent-hifi-group{
+  text-align: center;
+  margin-bottom:50px;
+}
