--- a/styles/maingridversion.css
+++ b/styles/maingridversion.css
@@ -355,11 +355,13 @@
   .project-details button{
     display: block;
     margin: 0 auto;
+    margin-bottom: 50px;
   }
 
   @media screen and (min-width: 991px){
     .project-details button{
     display: inline;
+    margin-bottom: 50px;
     }
   }
 
@@ -683,11 +685,13 @@
 .project-details button{
   display: block;
   margin: 0 auto;
+  margin-bottom: 50px;
 }
 
 @media screen and (min-width: 991px){
   .project-details button{
   display: inline;
+  margin-bottom: 50px;
   }
 }
 
@@ -2244,12 +2248,14 @@ text-align: center;
   .intent-hifi-pic{
     box-shadow: 0px 0px 15px grey;
     width: 325px;
+    margin-bottom: 50px;
   }
 
     @media screen and (min-width: 991px){
     .intent-hifi-pic{
       box-shadow: 0px 0px 15px grey;
       width:325px;
+      margin-bottom: 50px;
 
     }
   }
@@ -2366,6 +2372,11 @@ text-align: center;
 .research-findings-body{
     margin: 20px;
 }
+}
+
+.intent-user-survey{
+  margin-bottom: 50px;
+}
 
 .intent-user-survey h4{
   text-align: left;
@@ -2378,23 +2389,23 @@ text-align: center;
   text-align: center;
   padding-top: 50px;
   padding-bottom: 20px;
-}
+ }
 }
 
 .intent-all-hifi{
   display: block;
   margin: 0 auto;
-  margin-top: 50px;
-  margin-bottom:50px;
-}
 
-}
+  margin-bottom:50px;
+ }
+
+
 
 @media screen and (min-width: 991px){
     .intent-all-hifi{
       display: block;
       margin: 0 auto;
-      margin-top: 50px;
+
       margin-bottom:50px;
   }
 }
@@ -2403,4 +2414,39 @@ text-align: center;
 .intent-hifi-group{
   text-align: center;
   margin-bottom:50px;
+}
+
+
+.intent-sitemap-pic{
+  grid-column: 1/span 4;
+  grid-row-start: 14;
+  justify-self:center;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.intent-sitemap-pic{
+  width:325px;
+  margin-bottom: 50px;
+
+}
+
+
+@media screen and (min-width: 991px){
+    .intent-sitemap-pic{
+    margin-left: 20%;
+    margin-right: 20%;
+    width: 60%
+  }
+}
+
+.intent-full-analysis {
+
+    display: block;
+    margin: 0 auto;
+        margin-top: 0px;
+
+    justify-self: center;
+    margin-top: 50px;
+
 }
