adjusting footer links

--- a/styles/maingridversion.css
+++ b/styles/maingridversion.css
@@ -1941,7 +1941,9 @@ text-align: center;
   }
 
 .verve-footer-links img{
-  width: 40px;
+  width: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
   .verve-footer-text{
