--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -187,7 +187,7 @@
   display: grid;
   grid-gap: 20px;
   grid-template-columns: 80px 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 80px;
-  grid-auto-rows: repeat(2, 1fr);
+  grid-auto-rows:min-content;
   margin-bottom: 100px;
   margin-left:;
   margin-right:;
