--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -183,10 +183,11 @@
 
 /* Hero positioning & properties */
 
+/* mobile hero settings */
 .hero{
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: 80px 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 80px;
+  grid-template-columns: 10px 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 10px;
   grid-auto-rows:min-content;
   margin-bottom: 100px;
   margin-left:;
@@ -197,6 +198,48 @@
   z-index: 1;
 
 }
+
+.hero-headline{
+  grid-column-start:2;
+  grid-column-end: 12;
+  grid-row: 1;
+  align-self:center;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  color: #000000;
+}
+
+.hero-copy{
+  grid-column-start:2;
+  grid-column-end: 12;
+  grid-row: 2;
+  align-content: center;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  color: #000000;
+}
+
+/* Desktop hero settings */
+
+@media screen and (min-width: 991px){
+
+  .hero{
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 80px 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 80px;
+    grid-auto-rows:min-content;
+    margin-bottom: 100px;
+    margin-left:;
+    margin-right:;
+    grid-column-start:1;
+    grid-column-end: 13;
+    grid-row: 2;
+    z-index: 1;
+  }
 
 .hero-headline{
   grid-column-start:2;
@@ -221,7 +264,6 @@
   font-size: 16px;
   color: #000000;
 }
-
 
 }
 
