--- a/styles/stylesheet-2.0.css
+++ b/styles/stylesheet-2.0.css
@@ -22,40 +22,48 @@
     grid-gap: 5px;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: auto;
-    max-width: 1366px;
+    max-width: 768px;
     margin:15px;
   }
 
 }
 
+/* 
+Desktop Primary Navigation Grid & settings
 
-/* Primary Navigation Grid */
+ @media screen and (min-width: 991px){
 
-.primary-navigation{
-  display:grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(12,1fr);
-  grid-template-rows: 100px 1fr;
-  grid-column: 1/span 12;
-}
+  .mobilescreen{
+    display:none;
+  }
+} */
 
-/* Primary navigation link position */
+  .primary-navigation{
+    display:grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(12,1fr);
+    grid-template-rows: 100px 1fr;
+    grid-column: 1/span 12;
+  }
 
-.nav-work{
-  grid-column: 9/span 1;
-}
+  /* Primary navigation link position */
 
-.nav-about{
-  grid-column: 10/span 1;
-}
+  .nav-work{
+    grid-column: 9/span 1;
+  }
 
-.nav-resume{
-  grid-column: 11/span 1;
-}
+  .nav-about{
+    grid-column: 10/span 1;
+  }
 
-.nav-contact{
-  grid-column: 12/span 1;
-}
+  .nav-resume{
+    grid-column: 11/span 1;
+  }
+
+  .nav-contact{
+    grid-column: 12/span 1;
+  }
+
 
 /*
 Hero section */
@@ -92,6 +100,174 @@ grid-column: 4/span 3;
 grid-row: 3/span 1;
 
 }
+
+
+/* Mobile Navigation Grid & Settings */
+
+
+
+  /* .mobilescreen{
+    grid-column-start:2;
+    grid-row: 1;
+    z-index: 2;
+  }
+
+
+
+  .newburgerintown {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 40vh;
+    width:50%;
+    min-width: 400px;
+    height: 60px;
+    margin: 0 auto;
+  }
+
+  .newburgerintown h1 {
+      font-weight: 300;
+      color: #ECF0F1;
+  }
+
+  .newburgerintown p {
+      font-weight: 100;
+      color: #ECF0F1;
+      letter-spacing: .1em;
+  } */
+
+  /**Mobile (Hamburger-)Menu from here on**/
+
+  /** This is kind of a styled trigger here **/
+  /* #menuToggle
+  {
+      display: block;
+      position: absolute;
+      top: 50px;
+      left: 50px;
+      z-index: 1;
+      -webkit-user-select: none;
+      user-select: none;
+  }
+
+  #menuToggle input
+  {
+      display: block;
+      width: 40px;
+      height: 32px;
+      position: absolute;
+      top: -7px;
+      left: -5px;
+      cursor: pointer;
+      opacity: 0;
+      z-index: 2;
+      -webkit-touch-callout: none;
+
+  }
+
+  #menuToggle span
+  {
+      display: block;
+      width: 26px;
+      height: 2px;
+      margin-bottom: 5px;
+      position: relative;
+      background: #000000;
+      border-radius: 3px;
+      z-index: 1;
+      transform-origin: 3px 0px;
+      transition: transform 0.2s cubic-bezier(0.77,0.2,0.05,1.0),
+      background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+      opacity 0.55s ease;
+  }
+
+  #menuToggle span:first-child
+  {
+      transform-origin: 0% 0%;
+  }
+
+  #menuToggle span:nth-last-child(2)
+  {
+      transform-origin: 0% 100%;
+  }
+
+  #menuToggle input:checked ~ span
+  {
+      opacity: 1;
+      transform: rotate(45deg) translate(-2px, -1px);
+      background: #000000;
+  }
+  #menuToggle input:checked ~ span:nth-last-child(3)
+  {
+      opacity: 0;
+      transform: rotate(0deg)
+        scale(0.2, 0.2);
+  }
+
+  #menuToggle input:checked ~ span:nth-last-child(2)
+  {
+      opacity: 1;
+      transform: rotate(-45deg) translate(0, -1px);
+  } */
+
+  /*This is the Menu part, which gets triggered by toggle*/
+  /* #menu
+  {
+      position: absolute;
+      width: 90vw;
+      height: 110vh;
+      margin: -100px 0 0 -50px;
+      padding: 50px;
+      padding-top: 125px;
+      background: rgba(236, 240, 241, 0.97);;
+      list-style-type: none;
+      transform-origin: 0 0;
+      transform: translate(-100%, 0);
+      transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+      text-align: center;
+
+  }
+
+  #menu li
+  {
+      color: #000000;
+      list-style-type: none;
+      font-size: 2em;
+      font-weight: 300;
+      font-family: Avenir;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 1em;
+      line-height: 1.5em;
+      text-transform: none;
+      text-decoration: none;
+      color: #3A4e66;
+      padding-top:5%;
+  }
+
+  #menu li a {
+        color: #3A4e66;
+        text-decoration: none;
+        text-transformation: uppercase
+  }
+
+  #menu li a:hover {
+      color: #657348;
+      text-decoration: none;
+      font-weight: bold;
+  }
+
+  #menuToggle input:checked ~ ul
+  {
+      transform: scale(1.0, 1.0);
+      opacity: 1;
+  } */
+
+
+
+
+
+
 
 /* Work section */
 
