--- a/styles/stylesheet-2.0.css
+++ b/styles/stylesheet-2.0.css
@@ -2,12 +2,13 @@
 
 
 button{
-  background: #2F80ED;
-  border-radius: 28px;
+  background: #3A4E66;
+  border-radius: 10px;
   max-width: 256px;
   min-width: 149px;
   height: 39px;
-  outline:0;
+  border-style: none;
+  color: #ffffff;
   }
 
 h1{
@@ -387,7 +388,7 @@ grid-row: 3/span 1;
   display:grid;
   grid-gap: 20px;
   grid-template-columns: repeat(12,1fr);
-  grid-template-rows: repeat(4,1fr);
+  grid-template-rows: auto auto auto auto;
   grid-column: 1/span 12;
   grid-row:2;
   margin-bottom: 50px;
@@ -398,6 +399,7 @@ grid-row: 3/span 1;
   grid-row: 1/span 4;
   box-shadow: 0px 0px 19px -6px #000000;
   width: 100%;
+  height: auto;
 }
 
 .eyebrow-text{
