--- a/styles/stylesheet-2.0.css
+++ b/styles/stylesheet-2.0.css
@@ -1,5 +1,5 @@
 
-
+/* Global Settings */
 
 button{
   background: #3A4E66;
@@ -51,10 +51,6 @@ h2{
     line-height: 150%;
   }
 
-
-
-
-
 p{
   font-family: Avenir;
   font-style: normal;
@@ -62,6 +58,8 @@ p{
   font-size: 16px;
   line-height: 150%;
   }
+
+/* Navigation text styling */
 
   .logo, .nav-work, .nav-about, .nav-resume, .nav-contact{
     font-family: Avenir;
@@ -73,43 +71,7 @@ p{
     align-self: center;
   }
 
-/* Desktop Body Grid */
-
-.body{
-  /* display:grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(12,1fr);
-  grid-template-rows: auto;
-  max-width: 1366px;
-  margin:80px; */
-}
-
-
-
-/* Mobile Body Grid  */
-
-/* @media screen and (max-width: 768px){
-
-  .body{
-    display:grid;
-    grid-gap: 5px;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: auto;
-    max-width: 768px;
-    margin:15px;
-  }
-
-} */
-
-/*
-Desktop Primary Navigation Grid & settings
-
- @media screen and (min-width: 991px){
-
-  .mobilescreen{
-    display:none;
-  }
-} */
+/* Desktop primary navigation settings */
 
   .primary-navigation{
     display:grid;
@@ -125,10 +87,6 @@ Desktop Primary Navigation Grid & settings
     top: 0px;
     background: rgba(255, 255, 255, 0.9);
     height:auto;
-
-
-
-    grid-column: 1/span 12;
   }
 
   /* Primary navigation link positions */
@@ -155,6 +113,213 @@ Desktop Primary Navigation Grid & settings
     scroll-padding-top: 82px;
   }
 
+/* Hides mobile nav in Desktop */
+
+  @media screen and (min-width: 991px){
+
+   .mobilescreen{
+     display:none;
+   }
+ }
+
+/* Mobile Primary Navigation settings */
+
+@media screen and (max-width: 768px){
+
+ .primary-navigation{
+   display:grid;
+   grid-gap: 5px;
+   grid-template-columns: repeat(4,1fr);
+   grid-template-rows: auto;
+   max-width: 768px;
+   margin:0px;
+   padding-left:0px;
+   padding-right:0px;
+   position: -webkit-sticky;
+   position: sticky;
+   top: 0px;
+   background: rgba(255, 255, 255, 0.9);
+   height:auto;
+ }
+
+ .nav-work{
+   display:none;
+ }
+
+ .nav-about{
+   display:none;
+ }
+
+ .nav-resume{
+   display:none;
+ }
+
+ .nav-contact{
+   display:none;
+ }
+
+ .logo{
+   grid-column: 2/span 2;
+   text-align: center;
+ }
+
+  .mobilescreen{
+   grid-column-start:1;
+   grid-row: 1;
+   z-index: 2;
+   text-align: center;
+ }
+
+ /* .newburgerintown {
+   position: absolute;
+   left: 0;
+   right: 0;
+   top: 40vh;
+   width:50%;
+   min-width: 400px;
+   height: 60px;
+   margin: 0 auto;
+ }
+
+ .newburgerintown h1 {
+     font-weight: 300;
+     color: #ECF0F1;
+ }
+
+ .newburgerintown p {
+     font-weight: 100;
+     color: #ECF0F1;
+     letter-spacing: .1em;
+ } */
+
+ /**Mobile (Hamburger-)Menu from here on**/
+
+ /** This is kind of a styled trigger here **/
+   #menuToggle
+   {
+       display: block;
+       position: absolute;
+       top: 50px;
+       left: 50px;
+       z-index: 1;
+       -webkit-user-select: none;
+       user-select: none;
+   }
+
+   #menuToggle input
+   {
+       display: block;
+       width: 40px;
+       height: 32px;
+       position: absolute;
+       top: -7px;
+       left: -5px;
+       cursor: pointer;
+       opacity: 0;
+       z-index: 2;
+       -webkit-touch-callout: none;
+
+   }
+
+   #menuToggle span
+   {
+       display: block;
+       width: 26px;
+       height: 2px;
+       margin-bottom: 5px;
+       position: relative;
+       background: #000000;
+       border-radius: 3px;
+       z-index: 1;
+       transform-origin: 3px 0px;
+       transition: transform 0.2s cubic-bezier(0.77,0.2,0.05,1.0),
+       background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+       opacity 0.55s ease;
+   }
+
+   #menuToggle span:first-child
+   {
+       transform-origin: 0% 0%;
+   }
+
+   #menuToggle span:nth-last-child(2)
+   {
+       transform-origin: 0% 100%;
+   }
+
+   #menuToggle input:checked ~ span
+   {
+       opacity: 1;
+       transform: rotate(45deg) translate(-2px, -1px);
+       background: #000000;
+   }
+   #menuToggle input:checked ~ span:nth-last-child(3)
+   {
+       opacity: 0;
+       transform: rotate(0deg)
+         scale(0.2, 0.2);
+   }
+
+   #menuToggle input:checked ~ span:nth-last-child(2)
+   {
+       opacity: 1;
+       transform: rotate(-45deg) translate(0, -1px);
+   }
+
+   /*This is the Menu part, which gets triggered by toggle*/
+   #menu
+   {
+       position: absolute;
+       width: 90vw;
+       height: 110vh;
+       margin: -100px 0 0 -50px;
+       padding: 50px;
+       padding-top: 125px;
+       background: rgba(236, 240, 241, 0.97);;
+       list-style-type: none;
+       transform-origin: 0 0;
+       transform: translate(-100%, 0);
+       transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+       text-align: center;
+
+   }
+
+   #menu li
+   {
+       color: #000000;
+       list-style-type: none;
+       font-size: 2em;
+       font-weight: 300;
+       font-family: Avenir;
+       font-style: normal;
+       font-weight: 400;
+       font-size: 1em;
+       line-height: 1.5em;
+       text-transform: none;
+       text-decoration: none;
+       color: #3A4e66;
+       padding-top:5%;
+   }
+
+   #menu li a {
+         color: #3A4e66;
+         text-decoration: none;
+         text-transformation: uppercase
+   }
+
+   #menu li a:hover {
+       color: #657348;
+       text-decoration: none;
+       font-weight: bold;
+   }
+
+   #menuToggle input:checked ~ ul
+   {
+       transform: scale(1.0, 1.0);
+       opacity: 1;
+   }
+
+}
 
 /*
 Hero section */
@@ -167,9 +332,6 @@ Hero section */
   max-width: 1366px;
   margin:80px;
   height:416px;
-
-  grid-column: 1/span 12;
-  grid-row:2;
 }
 
 .hero-headline{
@@ -177,7 +339,6 @@ Hero section */
   grid-row: 1/span 1;
   align-self:flex-end;
 }
-
 
 .hero-copy{
 grid-column: 1/span 7;
@@ -188,182 +349,12 @@ grid-row: 2/span 2;
 .hero-work{
 grid-column: 1/span 3;
 grid-row: 3/span 1;
-
 }
 
 .hero-contact{
 grid-column: 4/span 3;
 grid-row: 3/span 1;
-
 }
-
-
-/* Mobile Navigation Grid & Settings */
-
-
-
-  /* .mobilescreen{
-    grid-column-start:2;
-    grid-row: 1;
-    z-index: 2;
-  }
-
-
-
-  .newburgerintown {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 40vh;
-    width:50%;
-    min-width: 400px;
-    height: 60px;
-    margin: 0 auto;
-  }
-
-  .newburgerintown h1 {
-      font-weight: 300;
-      color: #ECF0F1;
-  }
-
-  .newburgerintown p {
-      font-weight: 100;
-      color: #ECF0F1;
-      letter-spacing: .1em;
-  } */
-
-  /**Mobile (Hamburger-)Menu from here on**/
-
-  /** This is kind of a styled trigger here **/
-  /* #menuToggle
-  {
-      display: block;
-      position: absolute;
-      top: 50px;
-      left: 50px;
-      z-index: 1;
-      -webkit-user-select: none;
-      user-select: none;
-  }
-
-  #menuToggle input
-  {
-      display: block;
-      width: 40px;
-      height: 32px;
-      position: absolute;
-      top: -7px;
-      left: -5px;
-      cursor: pointer;
-      opacity: 0;
-      z-index: 2;
-      -webkit-touch-callout: none;
-
-  }
-
-  #menuToggle span
-  {
-      display: block;
-      width: 26px;
-      height: 2px;
-      margin-bottom: 5px;
-      position: relative;
-      background: #000000;
-      border-radius: 3px;
-      z-index: 1;
-      transform-origin: 3px 0px;
-      transition: transform 0.2s cubic-bezier(0.77,0.2,0.05,1.0),
-      background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-      opacity 0.55s ease;
-  }
-
-  #menuToggle span:first-child
-  {
-      transform-origin: 0% 0%;
-  }
-
-  #menuToggle span:nth-last-child(2)
-  {
-      transform-origin: 0% 100%;
-  }
-
-  #menuToggle input:checked ~ span
-  {
-      opacity: 1;
-      transform: rotate(45deg) translate(-2px, -1px);
-      background: #000000;
-  }
-  #menuToggle input:checked ~ span:nth-last-child(3)
-  {
-      opacity: 0;
-      transform: rotate(0deg)
-        scale(0.2, 0.2);
-  }
-
-  #menuToggle input:checked ~ span:nth-last-child(2)
-  {
-      opacity: 1;
-      transform: rotate(-45deg) translate(0, -1px);
-  } */
-
-  /*This is the Menu part, which gets triggered by toggle*/
-  /* #menu
-  {
-      position: absolute;
-      width: 90vw;
-      height: 110vh;
-      margin: -100px 0 0 -50px;
-      padding: 50px;
-      padding-top: 125px;
-      background: rgba(236, 240, 241, 0.97);;
-      list-style-type: none;
-      transform-origin: 0 0;
-      transform: translate(-100%, 0);
-      transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-      text-align: center;
-
-  }
-
-  #menu li
-  {
-      color: #000000;
-      list-style-type: none;
-      font-size: 2em;
-      font-weight: 300;
-      font-family: Avenir;
-      font-style: normal;
-      font-weight: 400;
-      font-size: 1em;
-      line-height: 1.5em;
-      text-transform: none;
-      text-decoration: none;
-      color: #3A4e66;
-      padding-top:5%;
-  }
-
-  #menu li a {
-        color: #3A4e66;
-        text-decoration: none;
-        text-transformation: uppercase
-  }
-
-  #menu li a:hover {
-      color: #657348;
-      text-decoration: none;
-      font-weight: bold;
-  }
-
-  #menuToggle input:checked ~ ul
-  {
-      transform: scale(1.0, 1.0);
-      opacity: 1;
-  } */
-
-
-
-
-
-
 
 /* Work section */
 
@@ -374,9 +365,6 @@ grid-row: 3/span 1;
   grid-template-rows: auto auto auto;
   max-width: 1366px;
   margin:80px;
-
-  grid-column: 1/span 12;
-  grid-row:3;
 }
 
 .work-headline{
@@ -477,6 +465,7 @@ grid-row: 3/span 1;
   width:100%;
   height:auto;
   overflow:hidden;
+  border-bottom: .5px solid #c4c4c4;
 }
 
 .card-eyebrow-text{
@@ -508,9 +497,6 @@ grid-row: 3/span 1;
   grid-template-rows: auto auto auto;
   max-width: 1366px;
   margin:80px;
-
-  grid-column: 1/span 12;
-  grid-row-start: 4;
 }
 
 .about-headline{
@@ -528,21 +514,7 @@ grid-row: 3/span 1;
   grid-row:3;
 }
 
-
 /* Footer Settings */
-
-
-
-
-    /* display: grid;
-    grid-gap: 20px;
-    grid-template-columns: 1fr;
-    box-sizing: border-box;
-    background-color: #3a4e66;
-    text-align: center;
-    display: block;
-    padding: 20px; */
-
 
   .footer{
     Display: grid;
@@ -554,18 +526,12 @@ grid-row: 3/span 1;
     margin:0px;
     padding:80px;
     background-color: #c4c4c4;
-
-    grid-column: 1/span 12;
-    grid-row-start: 4;
-
   }
-
 
   .footer-email{
     grid-column: 1/span 8;
     grid-row-start:1;
   }
-
 
   .footer-links{
     display: grid;
