--- a/styles/stylesheet-2.0.css
+++ b/styles/stylesheet-2.0.css
@@ -321,8 +321,7 @@ p{
 
 }
 
-/*
-Hero section */
+/*Desktop Hero section */
 
 .hero{
   display:grid;
@@ -356,7 +355,42 @@ grid-column: 4/span 3;
 grid-row: 3/span 1;
 }
 
-/* Work section */
+/* Mobile hero section */
+
+@media screen and (max-width: 768px){
+  .hero{
+    display:grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: auto;
+    max-width: 768px;
+    margin:25px;
+  }
+
+  .hero-headline{
+    grid-column: 1/span 4;
+    grid-row: 1/span 1;
+    align-self:flex-end;
+  }
+
+  .hero-copy{
+  grid-column: 1/span 4;
+  grid-row: 2/span 2;
+
+  }
+
+  .hero-work{
+  grid-column: 1/span 4;
+  grid-row: 3/span 1;
+  }
+
+  .hero-contact{
+  grid-column: 1/span 4;
+  grid-row: 4/span 1;
+  }
+}
+
+/* Desktop work section */
 
 .work{
   display:grid;
@@ -488,7 +522,143 @@ grid-row: 3/span 1;
   margin:10px;
 }
 
-/* About section */
+/* Mobile work section */
+
+@media screen and (max-width: 768px){
+
+  .work{
+    display:grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: auto auto auto;
+    max-width: 768px;
+    margin:25px;
+  }
+
+  .work-headline{
+    grid-column: 1/span 4;
+    grid-row: 1/span 1;
+  }
+
+  .featured-work{
+    display:grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: auto auto auto auto;
+    grid-column: 1/span 4;
+    grid-row:2;
+    margin-bottom: 50px;
+  }
+
+  .featured-project-image{
+    grid-column: 1/span 4;
+    grid-row: 1/span 4;
+    box-shadow: 0px 0px 19px -6px #000000;
+    width: 100%;
+    height: auto;
+  }
+
+  .eyebrow-text{
+    grid-column: 1/span 4;
+    grid-row: 5/span 1;
+  }
+
+  .featured-project-title{
+    grid-column: 1/span 4;
+    grid-row: 6/span 1;
+  }
+
+  .featured-project-description{
+    grid-column: 1/span 4;
+    grid-row: 7/span 1;
+  }
+
+  .see-the-full-case-study{
+    grid-column: 1/span 4;
+    grid-row: 8/span 1;
+  }
+
+  .additional-work{
+    display:grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: 4;
+    grid-column: 1/span 4;
+    grid-row:3;
+  }
+
+  .card1{
+    display:grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: auto auto 1fr 1fr;
+    grid-column: 1/span 4;
+    grid-row:1;
+    box-shadow: 0px 0px 19px -6px #000000;
+  }
+
+  .card2{
+    display:grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: auto auto 1fr 1fr;
+    grid-column: 1/span 4;
+    grid-row:2;
+    box-shadow: 0px 0px 19px -6px #000000;
+  }
+
+  .card3{
+    display:grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: auto auto 1fr 1fr;
+    grid-column: 1/span 4;
+    grid-row:3;
+    box-shadow: 0px 0px 19px -6px #000000;
+  }
+
+  .card4{
+    display:grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: auto auto 1fr 1fr;
+    grid-column: 1/span 4;
+    grid-row:4;
+    box-shadow: 0px 0px 19px -6px #000000;
+  }
+
+  .card-project-image{
+    grid-column: 1/span 4;
+    grid-row:1;
+    width:100%;
+    height:auto;
+    overflow:hidden;
+    border-bottom: .5px solid #c4c4c4;
+  }
+
+  .card-eyebrow-text{
+    grid-column: 1/span 4;
+    grid-row:2;
+    align-self:flex-end;
+    margin:10px;
+    height: 36px;
+  }
+
+  .card-project-title{
+    grid-column: 1/span 4;
+    grid-row:3;
+    margin:10px;
+  }
+
+  .card-see-the-full-case-study{
+    grid-column: 1/span 4;
+    grid-row:4;
+    margin:10px;
+  }
+}
+
+
+/* Desktop about section */
 
 .about{
   Display: grid;
@@ -514,7 +684,37 @@ grid-row: 3/span 1;
   grid-row:3;
 }
 
-/* Footer Settings */
+/* Mobile about section settings */
+
+ @media screen and (max-width: 768px){
+   .about{
+     Display: grid;
+     grid-gap:5px;
+     grid-template-columns: repeat(4,1fr);
+     grid-template-rows: auto auto auto auto;
+     max-width: 768px;
+     margin:25px;
+   }
+
+   .about-headline{
+     grid-column: 1/span 4;
+     grid-row:1;
+   }
+
+   .about-copy{
+     grid-column: 1/span 4;
+     grid-row:2;
+   }
+
+   .about-button{
+     grid-column: 1/span 4;
+     grid-row:3;
+   }
+ }
+
+
+
+/* Desktop footer Settings */
 
   .footer{
     Display: grid;
@@ -522,7 +722,6 @@ grid-row: 3/span 1;
     grid-template-columns: repeat(12,1fr);
     grid-template-rows: auto auto;
     max-width: 1366px;
-    margin:0px;
     margin:0px;
     padding:80px;
     background-color: #c4c4c4;
@@ -550,3 +749,41 @@ grid-row: 3/span 1;
     grid-column: 1/span 8;
     grid-row-start:2;
   }
+
+/* Mobile footer settings */
+
+@media screen and (max-width: 768px){
+  .footer{
+    Display: grid;
+    grid-gap:5px;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: auto auto auto;
+    max-width: 768px;
+    margin:0px;
+    padding:25px;
+    background-color: #c4c4c4;
+  }
+
+  .footer-email{
+    grid-column: 1/span 4;
+    grid-row-start:1;
+  }
+
+  .footer-links{
+    display: grid;
+    grid-gap:5px;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows; 1;
+    grid-column: 1/span 4;
+    grid-row-start:2;
+  }
+
+  .footer-links img{
+    width: 40px;
+  }
+
+  .footer-text{
+    grid-column: 1/span 4;
+    grid-row-start:3;
+  }
+}
